--- a/desktop-themes/BlueMint/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/BlueMint/gtk-3.0/gtk-widgets.css
@@ -2192,7 +2192,7 @@ notebook header tab label:backdrop {
     color: @theme_unfocused_fg_color;
 }
 
-/* notebooks, view, header and tabs in caja and pluma view */
+/* notebooks, view, header and tabs in caja and lapiz view */
 paned.horizontal notebook {
     border-style: none;
     border-color: @borders;
