--- a/desktop-themes/ClassicGreen/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/ClassicGreen/ctk-3.0/cafe-applications.css
@@ -402,13 +402,13 @@ na-tray-applet {
  * Pluma *
  ****************/
 
-/* pluma line numbers */
-.pluma-window textview {
+/* lapiz line numbers */
+.lapiz-window textview {
     background-color: shade (@bg_color, 1.07);
 }
 
 /* Printpreview */
-.pluma-print-preview toolbar.horizontal {
+.lapiz-print-preview toolbar.horizontal {
     background-color: transparent;
     background-image: linear-gradient(to bottom,
                       @toolbar_gradient_a 2px,
@@ -423,29 +423,29 @@ na-tray-applet {
     padding: 0px;
 }
 
-.pluma-print-preview toolbar.horizontal toolitem entry {
+.lapiz-print-preview toolbar.horizontal toolitem entry {
     padding: 2px 6px;
 }
 
-.pluma-print-preview toolbar.horizontal button.image-button,
-.pluma-print-preview toolbar.horizontal button.flat.image-button {
+.lapiz-print-preview toolbar.horizontal button.image-button,
+.lapiz-print-preview toolbar.horizontal button.flat.image-button {
     background-color: transparent;
     padding: 0px;
 }
 
-.pluma-print-preview toolbar.horizontal toolbutton button.text-button,
-.pluma-print-preview toolbar.horizontal toolbutton button.flat.text-button {
+.lapiz-print-preview toolbar.horizontal toolbutton button.text-button,
+.lapiz-print-preview toolbar.horizontal toolbutton button.flat.text-button {
     background-color: transparent;
     padding: 0px 8px;
     border-radius: 2px;
 }
 
 /* sidebar file-browser */
-.pluma-window paned.horizontal box.horizontal button.flat {
+.lapiz-window paned.horizontal box.horizontal button.flat {
     padding: 0px;
 }
 
-.pluma-window paned.horizontal box.vertical notebook.frame {
+.lapiz-window paned.horizontal box.vertical notebook.frame {
     border-width: 1px 0px 0px 0px;
     border-style: solid;
     border-color: @border_color;
@@ -453,15 +453,15 @@ na-tray-applet {
 }
 
 /* sidebar close button */
-.pluma-window paned.horizontal box.vertical notebook.frame toolbar button {
+.lapiz-window paned.horizontal box.vertical notebook.frame toolbar button {
   padding: 4px;
 }
 
-.pluma-window paned.horizontal box.vertical notebook.frame #ToolBar toolbutton button {
+.lapiz-window paned.horizontal box.vertical notebook.frame #ToolBar toolbutton button {
     border-width: 1px 1px 2px 1px;
 }
 
-.pluma-window paned.horizontal box.vertical notebook.frame #ToolBar toolbutton button:hover {
+.lapiz-window paned.horizontal box.vertical notebook.frame #ToolBar toolbutton button:hover {
     background-color: transparent;
     background-image: linear-gradient(to bottom,
                       @button_hover_gradient_a 5%,
@@ -473,7 +473,7 @@ na-tray-applet {
     border-style: solid;
 }
 
-.pluma-window paned.horizontal box.vertical notebook.frame #ToolBar toolbutton button:checked {
+.lapiz-window paned.horizontal box.vertical notebook.frame #ToolBar toolbutton button:checked {
     background-image: linear-gradient(to bottom,
                       @button_active_gradient_a,
                       @button_active_gradient_b 3px,
@@ -488,7 +488,7 @@ na-tray-applet {
     border-style: solid;
 }
 
-.pluma-window > box.vertical > paned.horizontal > paned.vertical > notebook > stack > box.vertical > scrolledwindow > scrollbar.vertical {
+.lapiz-window > box.vertical > paned.horizontal > paned.vertical > notebook > stack > box.vertical > scrolledwindow > scrollbar.vertical {
     border-width: 0px 1px 0px 0px;
 }
 
@@ -661,11 +661,11 @@ cafekbd-keyboard-drawing,
 
 /* fix for some maximized windows 
    https://github.com/cafe-desktop/cafe-desktop/issues/291
-   FIXME Sadly pluma ignore doesn't show the maximised style class */
+   FIXME Sadly lapiz ignore doesn't show the maximised style class */
 
 window.background.maximized.engrampa-window > grid.horizontal > paned.horizontal > scrolledwindow.frame,
 window.background.maximized.atril-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
-window.background.pluma-window > box.vertical > paned.horizontal > paned.vertical > notebook box.vertical > scrolledwindow.frame,
+window.background.lapiz-window > box.vertical > paned.horizontal > paned.vertical > notebook box.vertical > scrolledwindow.frame,
 window.background.maximized.logview-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
 window.background.maximized.caja-navigation-window notebook.caja-notebook scrolledwindow.frame {
     border-right-width: 0px;
