--- a/desktop-themes/Blue-Undersea/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/Blue-Undersea/gtk-3.0/cafe-applications.css
@@ -1042,7 +1042,7 @@ vte-terminal {
 }
 
 /****************
- * Pluma        *
+ * Lapiz        *
  ****************/
 
 /* lapiz line numbers */
@@ -1055,7 +1055,7 @@ vte-terminal {
     border-radius: 0px;
 }
 
-/* Pluma status bar */
+/* Lapiz status bar */
 .lapiz-window statusbar.horizontal frame button.flat.toggle {
     border-style: none;
     border-image: none;
