--- a/desktop-themes/BlueMint/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/BlueMint/gtk-3.0/cafe-applications.css
@@ -702,7 +702,7 @@ na-tray-applet widget box widget {
 }
 
 /****************
- * Pluma *
+ * Lapiz *
  ****************/
 
 /* lapiz line numbers */
@@ -716,7 +716,7 @@ na-tray-applet widget box widget {
     border-width: 0px
 }
 
-/* Pluma status bar */
+/* Lapiz status bar */
 .lapiz-window statusbar.horizontal frame {
     border-style: none;
 }
